Create the main structure and add a banner

--- a/pqrs.html
+++ b/pqrs.html
@@ -2,9 +2,46 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>PQRS</title>
   </head>
   <body>
+    <header>
+      <figure>
+        <img src="img/logoUCC.png">
+      </figure>
+      <h1>Peticiones, quejas, reclamos, sugerencias</h1>
+    </header>
+    <section>
+      <article>
+        <h2>Peticiones</h2>
+        <p>La petición es una solicitud, un pedido que alguien efectúa a otro para lograr alguna concesión,
+          la que puede hacerse en tono de ruego o bajo amenazas o advertencias, pudiendo efectuarse por cualquier
+          medio de comunicación y en forma oral o escrita.
+        </p>
+      </article>
+      <article>
+          <h2>Quejas</h2>
+          <p>Una queja es un escrito o comunicación a través del cual se pone de manifiesto la insatisfacción de una
+            persona usuaria en relación con el servicio recibido por parte de, por ejemplo, una organización.
+          </p>
+      </article>
+      <article>
+        <h2>Reclamos</h2>
+        <p>Una reclamación es una petición, una demanda que una persona plantea ante otra con el objetivo de resolver
+          un problema concreto. Una reclamación también puede realizarse ante una institución específica o ante un
+          comercio. Los clientes tienen derechos como consumidores de defender esos derechos ante el establecimiento.
+        </p>
+      </article>
+      <article>
+        <h2>Sugerencias</h2>
+        <p>El concepto de sugerencia dispone de un uso extendido en nuestro idioma y además es una cuestión que las
+          personas realizamos muchísimo en diversas situaciones y contextos, porque la sugerencia es la proposición
+          o insinuación de una idea frente a una cuestión que lo genera. Y normalmente en nuestro idioma solemos usar
+          la palabra como sinónimo de consejo y de recomendación.
+        </p>
+      </article>
 
+    </section>
+    <footer></footer>
   </body>
 </html>
