--- a/pqrs.html
+++ b/pqrs.html
@@ -12,6 +12,8 @@
       </figure>
       <h1>Peticiones, quejas, reclamos, sugerencias</h1>
     </header>
+
+    <!-- start main content-->
     <section>
       <article>
         <h2>Peticiones</h2>
@@ -40,8 +42,44 @@
           o insinuación de una idea frente a una cuestión que lo genera. Y normalmente en nuestro idioma solemos usar
           la palabra como sinónimo de consejo y de recomendación.
         </p>
-      </article>
+        <!--- end main content-->
 
+        <!-- Start form-->
+        <article>
+          <form id="form" action="" method="post">
+            <table>
+              <tr>
+                <td>Tipo de documento:</td>
+                <td><select id="document" name="document">
+                  <option>Cédula de ciudadanía</option>
+                  <option>Cédula de extranjería</option>
+                  <option>Tarjeta de identidad</option>
+                </select></td>
+              </tr>
+              <tr>
+                <td>Número de documento:</td>
+                <td><input type="text" id="numDoc"></td>
+              </tr>
+              <tr>
+                <td>Nombre:</td>
+                <td><input type="text"  id="nombre"></td>
+              </tr>
+              <tr>
+                <td>Apellidos:</td>
+                <td><input type="text" id="apellido"></td>
+              </tr>
+              <tr>
+                <td><label for="comentarios" id="label">Petición</label></td>
+              </tr>
+              <tr>
+                <td colspan="2"><textarea name="comentarios"  id="comentarios" rows="8" cols="80"></textarea></td>
+              </tr>
+            </table>
+
+          </form>
+        </article>
+      </article>
+      <!-- end form-->
     </section>
     <footer></footer>
   </body>
