Add php file for send mail

--- a/pqrs.html
+++ b/pqrs.html
@@ -54,37 +54,42 @@
         <article>
 
           <input type="button" id="volver" value="Volver">
-          
-          <form id="form" action="" method="post">
+
+          <form id="form" action="php/enviarMail.php" method="post">
             <table>
               <tr>
                 <td>Tipo de documento:</td>
-                <td><select id="document" name="document">
-                  <option>Cédula de ciudadanía</option>
-                  <option>Cédula de extranjería</option>
-                  <option>Tarjeta de identidad</option>
+                <td><select id="document" name="documento">
+                  <option value="Cédula de ciudadanía">Cédula de ciudadanía</option>
+                  <option value="Cédula de extranjería">Cédula de extranjería</option>
+                  <option value="Tarjeta de identidad">Tarjeta de identidad</option>
                 </select></td>
               </tr>
               <tr>
                 <td>Número de documento:</td>
-                <td><input type="text" id="numDoc"></td>
+                <td><input type="text" name="numDoc"></td>
               </tr>
               <tr>
                 <td>Nombre:</td>
-                <td><input type="text"  id="nombre"></td>
+                <td><input type="text"  name="nombre"></td>
               </tr>
               <tr>
                 <td>Apellidos:</td>
-                <td><input type="text" id="apellido"></td>
+                <td><input type="text" name="apellido"></td>
+              </tr>
+              <tr>
+                <td>Correo electrónico:</td>
+                <td><input type="text" name="correo"></td>
               </tr>
               <tr>
                 <td><label for="comentarios" id="label"></label></td>
+                <td><input type="text" name="opcion" value="" id="op"></td>
               </tr>
               <tr>
                 <td colspan="2"><textarea name="comentarios"  id="comentarios" rows="8" cols="80"></textarea></td>
               </tr>
               <tr>
-                <td><input type="submit" id="enivar" value="Enviar"></td>
+                <td><input type="submit" name="enivar" value="Enviar"></td>
               </tr>
             </table>
 
