Delete unnecessary function, and add comments

--- a/pqrs.html
+++ b/pqrs.html
@@ -65,19 +65,19 @@
               </tr>
               <tr>
                 <td>Número de documento:</td>
-                <td><input type="text" name="numDoc"></td>
+                <td><input type="text" name="numDoc" id="numDoc"></td>
               </tr>
               <tr>
                 <td>Nombre:</td>
-                <td><input type="text"  name="nombre"></td>
+                <td><input type="text"  name="nombre" id="nombre"></td>
               </tr>
               <tr>
                 <td>Apellidos:</td>
-                <td><input type="text" name="apellido"></td>
+                <td><input type="text" name="apellido" id="apellido"></td>
               </tr>
               <tr>
                 <td>Correo electrónico:</td>
-                <td><input type="text" name="correo"></td>
+                <td><input type="text" name="correo" id="correo"></td>
               </tr>
               <tr>
                 <td><label for="comentarios" id="label"></label></td>
