--- a/pqrs.html
+++ b/pqrs.html
@@ -7,6 +7,8 @@
 
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/jquery.validate.js"></script>
+    <script src="js/validate.addtionalMethods.js"></script>
+
 
     <script src="js/script.js"></script>
   </head>
@@ -93,6 +95,7 @@
               <tr>
                 <td>Tipo de documento:</td>
                 <td><select id="documento" name="documento">
+                  <option value="">--Por favor, selecciona--</option>
                   <option value="Cédula de ciudadanía">Cédula de ciudadanía</option>
                   <option value="Cédula de extranjería">Cédula de extranjería</option>
                   <option value="Tarjeta de identidad">Tarjeta de identidad</option>
